# fuzz

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  cov_runtime.c  target.c
include/: corpus.h  coverage.h  crash.h  executor.h  logger.h  mutations.h  options.h  utils.h
src/: corpus.cpp  coverage.cpp  crash.cpp  executor.cpp  main.cpp  mutations.cpp  utils.cpp
